objects/AcctSeed__Cash_Disbursement__c/AcctSeed__Cash_Disbursement__c.object-meta.xml
<CustomObject>
    <description>Used to document the payment made to an outside vendor, contact, or employee typically recorded as an payable. The aggregation of multiple cash disbursements constitute a cash disbursement batch.</description>
    <label>Cash Disbursement</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Cash Disbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>