objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Alternate_Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Alternate_Payee_Name__c</fullName>
    <inlineHelpText>Provides a means of manually denoting the name of the payee.</inlineHelpText>
    <label>Alternate Payee Name</label>
    <length>140</length>
    <type>Text</type>
</CustomField>