objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__AS_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AS_Pay_Type__c</fullName>
    <inlineHelpText>This field is applicable to Accounting Seed Payment Services and will display the available payment types. It will default to the preferred payment type on the Vendor Account record.</inlineHelpText>
    <label>Payment Services Type Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__AS_Pay_Type</valueSetName>
    </valueSet>
</CustomField>