objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Upon posting a credit entry will be made to this GL account.</inlineHelpText>
    <label>Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Cash Disbursements</relationshipLabel>
    <relationshipName>Cash_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>