objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Bank_Transaction__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Transaction</label>
    <referenceTo>AcctSeed__Bank_Transaction__c</referenceTo>
    <relationshipLabel>Cash Disbursements</relationshipLabel>
    <relationshipName>Cash_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>