objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Check_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Check_Number__c</fullName>
    <inlineHelpText>Check number of physical checks generated from the system. The # is based off highest check # for this account plus 1.</inlineHelpText>
    <label>Check Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>