objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Debit_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Debit_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Source=Payable, always the AP Control GL account. If Source=Manual, typically expense or deferred/prepaid expense. If Source=Manual and populated, overrides the Prepaid Expense GL Account set in Accounting Settings.</inlineHelpText>
    <label>Debit GL Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Expense</value>
        </filterItems>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Balance Sheet</value>
        </filterItems>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Revenue</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Cash Disbursements (Refund GL Account)</relationshipLabel>
    <relationshipName>Cash_Disbursements1</relationshipName>
    <type>Lookup</type>
</CustomField>