objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Default_1099_Box__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Default_1099_Box__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(AcctSeed__Vendor__c)),AcctSeed__Vendor__r.AcctSeed__X1099_Vendor__c=True),Text(AcctSeed__Vendor__r.AcctSeed__Default_1099_Box__c), 
IF(AND(NOT(ISBLANK(AcctSeed__Contact__c)),AcctSeed__Contact__r.AcctSeed__X1099_Vendor__c=True),Text(AcctSeed__Contact__r.AcctSeed__Default_1099_Box__c), 
IF(AND(NOT(ISBLANK(AcctSeed__Employee__c)),AcctSeed__Employee__r.AcctSeed__X1099_Vendor__c=True),Text(AcctSeed__Employee__r.AcctSeed__Default_1099_Box__c), 
&quot;&quot;)))</formula>
    <inlineHelpText>Shows default 1099 box set on the account or contact if a payee is marked as a 1099 vendor.</inlineHelpText>
    <label>Default 1099 Box</label>
    <type>Text</type>
</CustomField>