objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Disbursement_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>The date cash was received.</inlineHelpText>
    <label>Disbursement Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>