objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Employee__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A Cash Disbursement can have either the Account (Vendor), Contact or User (Employee) as the Payee. One object must be chosen.</inlineHelpText>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cash_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>