objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Form_1099_Box__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Form_1099_Box__c</fullName>
    <description>This field should be set via the customized UI components. This field should be locked down for update or insert.</description>
    <inlineHelpText>Cash disbursements will be classified in the 1099 Export File according to this Form 1099 Type and Box. Each year review your defaults, and check for any new 1099 Form options to reflect changes by the IRS. Change by selecting Update 1099 Info button.</inlineHelpText>
    <label>Form 1099 Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>