objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Full_Remittance__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Full_Remittance__c</fullName>
    <formula>IF(AcctSeed__AP_Voucher_Count__c&gt;10, &quot;Yes&quot;, &quot; &quot;)</formula>
    <inlineHelpText>Indicates if a Full Remittance should be printed.</inlineHelpText>
    <label>Full Remittance</label>
    <type>Text</type>
</CustomField>