objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__GL_Account_Variable_2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
    <label>GL Variable 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Cash Disbursements (GL Account Variable 2)</relationshipLabel>
    <relationshipName>Cash_Disbursements1</relationshipName>
    <type>Lookup</type>
</CustomField>