objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Last_Payment_Service_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Last_Payment_Service_Sync_Date__c</fullName>
    <label>Last Payment Service Sync Date</label>
    <type>DateTime</type>
</CustomField>