objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the associated ledger.</description>
    <label>Ledger</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Ledger__c.AcctSeed__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Ledger must be active</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Cash Disbursements</relationshipLabel>
    <relationshipName>Cash_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>