objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Payee_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee_City_State_Zip__c</fullName>
    <formula>IF(NOT(ISBLANK(AcctSeed__Payee_City__c)) &amp;&amp; NOT(ISBLANK(AcctSeed__Payee_State__c)), AcctSeed__Payee_City__c &amp; &quot; &quot; &amp; AcctSeed__Payee_State__c &amp; IF(NOT(ISBLANK(AcctSeed__Payee_Postal_Code__c)), &quot; &quot; &amp; AcctSeed__Payee_Postal_Code__c, &quot;&quot;),
IF(NOT(ISBLANK(AcctSeed__Vendor__c)), AcctSeed__Vendor__r.BillingCity &amp; &quot; &quot; &amp; AcctSeed__Vendor__r.BillingState &amp; &quot; &quot; &amp; AcctSeed__Vendor__r.BillingPostalCode,
IF(NOT(ISBLANK(AcctSeed__Contact__c)), AcctSeed__Contact__r.MailingCity &amp; &quot; &quot; &amp; AcctSeed__Contact__r.MailingState &amp; &quot; &quot; &amp; AcctSeed__Contact__r.MailingPostalCode,
IF(NOT(ISBLANK(AcctSeed__Employee__c)), AcctSeed__Employee__r.City &amp; &quot; &quot; &amp; AcctSeed__Employee__r.State &amp; &quot; &quot; &amp; AcctSeed__Employee__r.PostalCode, 
&quot;&quot;))))</formula>
    <inlineHelpText>City, State and postal code as it appears on the check.</inlineHelpText>
    <label>Payee City State Zip</label>
    <type>Text</type>
</CustomField>