objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Payee_Country__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee_Country__c</fullName>
    <formula>IF(NOT(ISBLANK(AcctSeed__Payee_Country2__c)), AcctSeed__Payee_Country2__c,
IF(NOT(ISBLANK(AcctSeed__Vendor__c)), AcctSeed__Vendor__r.BillingCountry,
IF(NOT(ISBLANK(AcctSeed__Contact__c)),AcctSeed__Contact__r.MailingCountry,
IF(NOT(ISBLANK(AcctSeed__Employee__c)),AcctSeed__Employee__r.Country,
&quot;&quot;))))</formula>
    <inlineHelpText>Country as it appears on the check.</inlineHelpText>
    <label>Payee Country</label>
    <type>Text</type>
</CustomField>