objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Payee_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee_Postal_Code__c</fullName>
    <inlineHelpText>Postal Code as it appears on the check.</inlineHelpText>
    <label>Payee Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>