objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Payee_Street2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payee_Street2__c</fullName>
    <inlineHelpText>Street Address as it appears on the check.</inlineHelpText>
    <label>Payee Street</label>
    <type>TextArea</type>
</CustomField>