objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Payment_Proposal_Line__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Proposal_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Proposal Line</label>
    <referenceTo>AcctSeed__Payment_Proposal_Line__c</referenceTo>
    <relationshipLabel>Cash Disbursements</relationshipLabel>
    <relationshipName>Cash_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>