objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Payment_Service_Status_Note__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Service_Status_Note__c</fullName>
    <inlineHelpText>Additional details about the payment submission.</inlineHelpText>
    <label>Payment Service Status Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>