objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Payment_Services_Error__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Services_Error__c</fullName>
    <inlineHelpText>Errors from Edenred payment API.</inlineHelpText>
    <label>Payment Services Error</label>
    <type>TextArea</type>
</CustomField>