objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Payment_Services_Reference__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Services_Reference__c</fullName>
    <label>Payment Services Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>