objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Status__c</fullName>
    <inlineHelpText>Shows a status of paid or void.</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
                <default>true</default>
                <label>Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>