objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Project__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Typically used to track customer engagements or events.</inlineHelpText>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Cash Disbursements</relationshipLabel>
    <relationshipName>Cash_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>