objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Reference__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Reference__c</fullName>
    <inlineHelpText>Customer check number or electronic transaction reference.</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>