objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Source__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Source__c</fullName>
    <inlineHelpText>Denotes the source of the cash disbursement either &quot;Manual&quot; or &quot;Payable&quot;.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>