objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__Void_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Void_Date__c</fullName>
    <label>Void Date</label>
    <type>Date</type>
</CustomField>