objects/AcctSeed__Cash_Disbursement__c/fields/AcctSeed__X1099_Vendor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__X1099_Vendor__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(AcctSeed__Vendor__c)),AcctSeed__Vendor__r.AcctSeed__X1099_Vendor__c=True),&quot;Yes&quot;,
IF(AND(NOT(ISBLANK(AcctSeed__Contact__c)),AcctSeed__Contact__r.AcctSeed__X1099_Vendor__c=True),&quot;Yes&quot;,
IF(AND(NOT(ISBLANK(AcctSeed__Employee__c)),AcctSeed__Employee__r.AcctSeed__X1099_Vendor__c=True),&quot;Yes&quot;,
&quot;No&quot;)))</formula>
    <inlineHelpText>Indicates if a 1099 must be issued to this vendor at year end. Includes disbursements made to this vendor on 1099 reports and file export. Change by selecting Update 1099 Info button on the payee record.</inlineHelpText>
    <label>1099 Vendor</label>
    <type>Text</type>
</CustomField>