objects/AcctSeed__Cash_Disbursement__c/validationRules/AcctSeed__GL_Account_Variable_3_Correct_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__GL_Account_Variable_3_Correct_Type</fullName>
    <active>false</active>
    <description>Ensures the GL Variable 4 field is of type GL Variable 3</description>
    <errorConditionFormula>NOT(ISBLANK( AcctSeed__GL_Account_Variable_3__c )) &amp;&amp; TEXT(AcctSeed__GL_Account_Variable_3__r.AcctSeed__Type__c) != &quot;GL Account Variable 3&quot;</errorConditionFormula>
    <errorDisplayField>AcctSeed__GL_Account_Variable_3__c</errorDisplayField>
    <errorMessage>Cash Disbursement: The GL Accounting Variable must have a Type of &apos;GL Account Variable 3&apos;.</errorMessage>
</ValidationRule>